--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Ashutosh Sharma Photography</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
+	<meta name="description" content="Photography Portfolio of Ashutosh Sharma" />
+	<meta name="keywords" content="" />
+	<meta name="author" content="ashutosh.tk" />
 
 	<!-- 
 	//////////////////////////////////////////////////////
@@ -104,6 +104,7 @@
 
 				<div id="fh5co-board" data-columns>
 
+					<!--2022-->
 					<div class="item">
 						<div class="animate-box">
 							<a href="images\2022\IMG_20220408_092411 (2).jpg" class="image-popup fh5co-board-img"
@@ -321,6 +322,10 @@
 								title=""><img src="images\2022\IMG_20220619_003241.jpg" alt=""></a>
 						</div>
 					</div>
+
+
+					<!--2021-->
+
 
 				</div>
 			</div>
