--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<title>Ashutosh Sharma Photography</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Photography Portfolio of Ashutosh Sharma" />
-	<meta name="keywords" content="" />
+	<meta name="keywords" content="photography, portfolio, ashutosh sharma, ashutosh, ashutosh sharma portfolio, ashutosh sharma photography portfolio, ashutosh sharma photography, ashutosh photography, ashuu photography, ashuuphotography, ashuphotography, asphotography, ashutosh sharma photography portfolio" />
 	<meta name="author" content="ashutosh.tk" />
 
 	<!-- 
