--- a/contact.html
+++ b/contact.html
@@ -7,25 +7,12 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Hydrogen &mdash; A free HTML5 Template by FREEHTML5.CO</title>
+	<title>Contact Us</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
-
-  <!-- 
-	//////////////////////////////////////////////////////
-
-	FREE HTML5 TEMPLATE 
-	DESIGNED & DEVELOPED by FREEHTML5.CO
-		
-	Website: 		http://freehtml5.co/
-	Email: 			info@freehtml5.co
-	Twitter: 		http://twitter.com/fh5co
-	Facebook: 		https://www.facebook.com/fh5co
-
-	//////////////////////////////////////////////////////
-	 -->
+	<meta name="description" content="Photography Portfolio of Ashutosh Sharma" />
+	<meta name="keywords"
+		content="photography, portfolio, ashutosh sharma, ashutosh, ashutosh sharma portfolio, ashutosh sharma photography portfolio, ashutosh sharma photography, ashutosh photography, ashuu photography, ashuuphotography, ashuphotography, asphotography, ashutosh sharma photography portfolio" />
+	<meta name="author" content="ashutosh.tk" />
 
   <!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
@@ -67,20 +54,18 @@
 		
 	<div id="fh5co-offcanvass">
 		<a href="#" class="fh5co-offcanvass-close js-fh5co-offcanvass-close">Menu <i class="icon-cross"></i> </a>
-		<h1 class="fh5co-logo"><a class="navbar-brand" href="index.html">Hydrogen</a></h1>
+		<h1 class="fh5co-logo"><a class="navbar-brand" href="index.html">AS Photography</h1>
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="about.html">About</a></li>
-			<li><a href="pricing.html">Pricing</a></li>
 			<li class="active"><a href="contact.html">Contact</a></li>
 		</ul>
 		<h3 class="fh5co-lead">Connect with us</h3>
 		<p class="fh5co-social-icons">
-			<a href="#"><i class="icon-twitter"></i></a>
-			<a href="#"><i class="icon-facebook"></i></a>
-			<a href="#"><i class="icon-instagram"></i></a>
-			<a href="#"><i class="icon-dribbble"></i></a>
-			<a href="#"><i class="icon-youtube"></i></a>
+			<a href="https://twitter.com/shaayyrr"><i class="icon-twitter"></i></a>
+			<a href="https://www.instagram.com/ashuu.photography/"><i class="icon-instagram"></i></a>
+			<a href="https://www.instagram.com/shaayyrr/"><i class="icon-instagram"></i></a>
+			<a href="https://www.youtube.com/c/V3NOMOP"><i class="icon-youtube"></i></a>
 		</p>
 	</div>
 	<header id="fh5co-header" role="banner">
@@ -88,7 +73,7 @@
 			<div class="row">
 				<div class="col-md-12">
 					<a href="#" class="fh5co-menu-btn js-fh5co-menu-btn">Menu <i class="icon-menu"></i></a>
-					<a class="navbar-brand" href="index.html">Hydrogen</a>		
+					<a class="navbar-brand" href="index.html">Ashutosh Sharma Photography</a>		
 				</div>
 			</div>
 		</div>
@@ -140,13 +125,12 @@
 			<div class="row row-padded">
 				<div class="col-md-12 text-center">
 					<p class="fh5co-social-icons">
-						<a href="#"><i class="icon-twitter"></i></a>
-						<a href="#"><i class="icon-facebook"></i></a>
-						<a href="#"><i class="icon-instagram"></i></a>
-						<a href="#"><i class="icon-dribbble"></i></a>
-						<a href="#"><i class="icon-youtube"></i></a>
+						<a href="https://twitter.com/shaayyrr"><i class="icon-twitter"></i></a>
+						<a href="https://www.instagram.com/ashuu.photography/"><i class="icon-instagram"></i></a>
+						<a href="https://www.instagram.com/shaayyrr/"><i class="icon-instagram"></i></a>
+						<a href="https://www.youtube.com/c/V3NOMOP"><i class="icon-youtube"></i></a>
 					</p>
-					<p><small>&copy; Hydrogen Free HTML5 Template. All Rights Reserved. <br>Designed by: <a href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> | Images by: <a href="http://pexels.com" target="_blank">Pexels</a> </small></p>
+					<p><small>&copy; Ashutosh Sharma Photography. All Rights Reserved.</small></p>
 				</div>
 			</div>
 		</div>
