--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 
 	<div id="fh5co-offcanvass">
 		<a href="#" class="fh5co-offcanvass-close js-fh5co-offcanvass-close">Menu <i class="icon-cross"></i> </a>
-		<h1 class="fh5co-logo"><a class="navbar-brand" href="index.html">Hydrogen</a></h1>
+		<h1 class="fh5co-logo"><a class="navbar-brand" href="index.html">AS Photography</a></h1>
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li class="active"><a href="about.html">About</a></li>
@@ -65,11 +65,10 @@
 		</ul>
 		<h3 class="fh5co-lead">Connect with us</h3>
 		<p class="fh5co-social-icons">
-			<a href="#"><i class="icon-twitter"></i></a>
-			<a href="#"><i class="icon-facebook"></i></a>
-			<a href="#"><i class="icon-instagram"></i></a>
-			<a href="#"><i class="icon-dribbble"></i></a>
-			<a href="#"><i class="icon-youtube"></i></a>
+			<a href="https://twitter.com/shaayyrr"><i class="icon-twitter"></i></a>
+			<a href="https://www.instagram.com/ashuu.photography/"><i class="icon-instagram"></i></a>
+			<a href="https://www.instagram.com/shaayyrr/"><i class="icon-instagram"></i></a>
+			<a href="https://www.youtube.com/c/V3NOMOP"><i class="icon-youtube"></i></a>
 		</p>
 	</div>
 	<header id="fh5co-header" role="banner">
@@ -92,7 +91,8 @@
 					<h2>Ashutosh Sharma</h2>
 					<div class="fh5co-spacer fh5co-spacer-sm"></div>
 					<p>
-						<img src="images\person.jpg" alt="Ashutosh Sharma" class="img-rounded img-responsive" width="20%"></p>
+						<img src="images\person.jpg" alt="Ashutosh Sharma" class="img-rounded img-responsive"
+							width="20%"></p>
 
 					<p class="text-muted">Ashutosh is a Photographer, Web Developer, UI/UX Desiner, Graphic Designer and
 						Full-Stack Developer from
@@ -122,15 +122,12 @@
 			<div class="row row-padded">
 				<div class="col-md-12 text-center">
 					<p class="fh5co-social-icons">
-						<a href="#"><i class="icon-twitter"></i></a>
-						<a href="#"><i class="icon-facebook"></i></a>
-						<a href="#"><i class="icon-instagram"></i></a>
-						<a href="#"><i class="icon-dribbble"></i></a>
-						<a href="#"><i class="icon-youtube"></i></a>
+						<a href="https://twitter.com/shaayyrr"><i class="icon-twitter"></i></a>
+						<a href="https://www.instagram.com/ashuu.photography/"><i class="icon-instagram"></i></a>
+						<a href="https://www.instagram.com/shaayyrr/"><i class="icon-instagram"></i></a>
+						<a href="https://www.youtube.com/c/V3NOMOP"><i class="icon-youtube"></i></a>
 					</p>
-					<p><small>&copy; Hydrogen Free HTML5 Template. All Rights Reserved. <br>Designed by: <a
-								href="http://freehtml5.co/" target="_blank">FREEHTML5.co</a> | Images by: <a
-								href="http://pexels.com" target="_blank">Pexels</a> </small></p>
+					<p><small>&copy; Ashutosh Sharma Photography. All Rights Reserved.</small></p>
 				</div>
 			</div>
 		</div>
