--- a/about.html
+++ b/about.html
@@ -30,6 +30,10 @@
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 	<link rel="shortcut icon" href="favicon.ico">
 
+	
+	<!--Font Awesome-->
+	<script src="https://kit.fontawesome.com/7d405a99ed.js" crossorigin="anonymous"></script>
+	
 	<!-- Google Webfonts -->
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,100,500' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
@@ -65,10 +69,12 @@
 		</ul>
 		<h3 class="fh5co-lead">Connect with us</h3>
 		<p class="fh5co-social-icons">
-			<a href="https://twitter.com/shaayyrr"><i class="icon-twitter"></i></a>
-			<a href="https://www.instagram.com/ashuu.photography/"><i class="icon-instagram"></i></a>
-			<a href="https://www.instagram.com/shaayyrr/"><i class="icon-instagram"></i></a>
-			<a href="https://www.youtube.com/c/V3NOMOP"><i class="icon-youtube"></i></a>
+			<a href="https://twitter.com/shaayyrr"><i class="fa-brands fa-twitter"></i></a>
+			<a href="https://www.instagram.com/ashuu.photography/"><i class="fa-brands fa-instagram"></i></a>
+			<a href="https://github.com/venomm97"><i class="fa-brands fa-github"></i></a>
+			<a href="https://www.youtube.com/c/V3NOMOP"><i class="fa-brands fa-youtube"></i></a>
+			<a href="mailto:ashutosh.ssv@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+
 		</p>
 	</div>
 	<header id="fh5co-header" role="banner">
@@ -122,10 +128,14 @@
 			<div class="row row-padded">
 				<div class="col-md-12 text-center">
 					<p class="fh5co-social-icons">
-						<a href="https://twitter.com/shaayyrr"><i class="icon-twitter"></i></a>
-						<a href="https://www.instagram.com/ashuu.photography/"><i class="icon-instagram"></i></a>
-						<a href="https://www.instagram.com/shaayyrr/"><i class="icon-instagram"></i></a>
-						<a href="https://www.youtube.com/c/V3NOMOP"><i class="icon-youtube"></i></a>
+						<a href="https://twitter.com/shaayyrr"><i class="fa-solid fa-user"></i></a>
+						<a href="https://twitter.com/shaayyrr"><i class="fa-brands fa-twitter"></i></a>
+						<a href="https://www.instagram.com/ashuu.photography/"><i
+								class="fa-brands fa-instagram"></i></a>
+						<a href="https://github.com/venomm97"><i class="fa-brands fa-github"></i></a>
+						<a href="https://www.youtube.com/c/V3NOMOP"><i class="fa-brands fa-youtube"></i></a>
+						<a href="mailto:ashutosh.ssv@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+						<a href="https://ashulinktree.netlify.app/"><i class="fa-solid fa-link"></i></a>
 					</p>
 					<p><small>&copy; Ashutosh Sharma Photography. All Rights Reserved.</small></p>
 				</div>
