--- a/contact.html
+++ b/contact.html
@@ -1,10 +1,12 @@
-
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-	<head>
+<!--[if gt IE 8]><!-->
+<html class="no-js">
+<!--<![endif]-->
+
+<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Contact Us</title>
@@ -14,12 +16,12 @@
 		content="photography, portfolio, ashutosh sharma, ashutosh, ashutosh sharma portfolio, ashutosh sharma photography portfolio, ashutosh sharma photography, ashutosh photography, ashuu photography, ashuuphotography, ashuphotography, asphotography, ashutosh sharma photography portfolio" />
 	<meta name="author" content="ashutosh.tk" />
 
-  <!-- Facebook and Twitter integration -->
-	<meta property="og:title" content=""/>
-	<meta property="og:image" content=""/>
-	<meta property="og:url" content=""/>
-	<meta property="og:site_name" content=""/>
-	<meta property="og:description" content=""/>
+	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content="" />
+	<meta property="og:image" content="" />
+	<meta property="og:url" content="" />
+	<meta property="og:site_name" content="" />
+	<meta property="og:description" content="" />
 	<meta name="twitter:title" content="" />
 	<meta name="twitter:image" content="" />
 	<meta name="twitter:url" content="" />
@@ -32,6 +34,9 @@
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,100,500' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	
+	<!--Font Awesome-->
+	<script src="https://kit.fontawesome.com/7d405a99ed.js" crossorigin="anonymous"></script>
+
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
 	<!-- Icomoon Icon Fonts-->
@@ -49,9 +54,10 @@
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
 
-	</head>
-	<body>
-		
+</head>
+
+<body>
+
 	<div id="fh5co-offcanvass">
 		<a href="#" class="fh5co-offcanvass-close js-fh5co-offcanvass-close">Menu <i class="icon-cross"></i> </a>
 		<h1 class="fh5co-logo"><a class="navbar-brand" href="index.html">AS Photography</h1>
@@ -62,10 +68,11 @@
 		</ul>
 		<h3 class="fh5co-lead">Connect with us</h3>
 		<p class="fh5co-social-icons">
-			<a href="https://twitter.com/shaayyrr"><i class="icon-twitter"></i></a>
-			<a href="https://www.instagram.com/ashuu.photography/"><i class="icon-instagram"></i></a>
-			<a href="https://www.instagram.com/shaayyrr/"><i class="icon-instagram"></i></a>
-			<a href="https://www.youtube.com/c/V3NOMOP"><i class="icon-youtube"></i></a>
+			<a href="https://twitter.com/shaayyrr"><i class="fa-brands fa-twitter"></i></a>
+			<a href="https://www.instagram.com/ashuu.photography/"><i class="fa-brands fa-instagram"></i></a>
+			<a href="https://github.com/venomm97"><i class="fa-brands fa-github"></i></a>
+			<a href="https://www.youtube.com/c/V3NOMOP"><i class="fa-brands fa-youtube"></i></a>
+			<a href="mailto:ashutosh.ssv@gmail.com"><i class="fa-solid fa-envelope"></i></a>
 		</p>
 	</div>
 	<header id="fh5co-header" role="banner">
@@ -73,14 +80,14 @@
 			<div class="row">
 				<div class="col-md-12">
 					<a href="#" class="fh5co-menu-btn js-fh5co-menu-btn">Menu <i class="icon-menu"></i></a>
-					<a class="navbar-brand" href="index.html">Ashutosh Sharma Photography</a>		
+					<a class="navbar-brand" href="index.html">Ashutosh Sharma Photography</a>
 				</div>
 			</div>
 		</div>
 	</header>
 	<!-- END .header -->
-	
-	
+
+
 	<div id="fh5co-main">
 		<div class="container">
 			<div class="row">
@@ -91,7 +98,7 @@
 						<div class="row">
 							<div class="col-md-6">
 								<div class="form-group">
-									<input type="text" class="form-control" placeholder="First Name">	
+									<input type="text" class="form-control" placeholder="First Name">
 								</div>
 							</div>
 							<div class="col-md-6">
@@ -104,7 +111,8 @@
 									<input type="email" class="form-control" placeholder="Email Address">
 								</div>
 								<div class="form-group">
-									<textarea name="message" id="message" cols="30" class="form-control" rows="10"></textarea>
+									<textarea name="message" id="message" cols="30" class="form-control"
+										rows="10"></textarea>
 								</div>
 								<div class="form-group">
 									<input type="submit" class="btn btn-primary" value="Send Message">
@@ -112,23 +120,27 @@
 							</div>
 						</div>
 					</form>
-					
+
 				</div>
-        		
-        	</div>
-       </div>
+
+			</div>
+		</div>
 	</div>
 
 	<footer id="fh5co-footer">
-		
+
 		<div class="container">
 			<div class="row row-padded">
 				<div class="col-md-12 text-center">
 					<p class="fh5co-social-icons">
-						<a href="https://twitter.com/shaayyrr"><i class="icon-twitter"></i></a>
-						<a href="https://www.instagram.com/ashuu.photography/"><i class="icon-instagram"></i></a>
-						<a href="https://www.instagram.com/shaayyrr/"><i class="icon-instagram"></i></a>
-						<a href="https://www.youtube.com/c/V3NOMOP"><i class="icon-youtube"></i></a>
+						<a href="https://twitter.com/shaayyrr"><i class="fa-solid fa-user"></i></a>
+						<a href="https://twitter.com/shaayyrr"><i class="fa-brands fa-twitter"></i></a>
+						<a href="https://www.instagram.com/ashuu.photography/"><i
+								class="fa-brands fa-instagram"></i></a>
+						<a href="https://github.com/venomm97"><i class="fa-brands fa-github"></i></a>
+						<a href="https://www.youtube.com/c/V3NOMOP"><i class="fa-brands fa-youtube"></i></a>
+						<a href="mailto:ashutosh.ssv@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+						<a href="https://ashulinktree.netlify.app/"><i class="fa-solid fa-link"></i></a>
 					</p>
 					<p><small>&copy; Ashutosh Sharma Photography. All Rights Reserved.</small></p>
 				</div>
@@ -152,8 +164,9 @@
 	<!-- Main JS -->
 	<script src="js/main.js"></script>
 
-	
 
-	
-	</body>
+
+
+</body>
+
 </html>
