--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 					<!--2022-->
 					<div class="item">
 						<div class="animate-box">
-							<a href="images\2022\IMG_20220408_092411 (2).jpg" class="image-popup fh5co-board-img"
-								title=""><img src="images\2022\IMG_20220408_092411 (2).jpg" alt=""></a>
+							<a href="images\2022\IMG_20220408_092411 (2).jpg" class="image-popup fh5co-board-img thumb"
+								title=""><img src="images\2022\IMG_20220408_092411 (2).jpg" alt="" class="thumb"></a>
 						</div>
 					</div>
 
