--- a/index.html
+++ b/index.html
@@ -110,21 +110,21 @@
 					<div class="item">
 						<div class="animate-box">
 							<a href="images\2022\IMG_20220320_175931_1 (3).jpg" class="image-popup fh5co-board-img"
-								title=""><img src="images\2022\IMG_20220320_175931_1 (3).jpg" alt=""></a>
+								title=""><img src="images\2022\IMG_20220320_175931_1 (3).jpg" alt="" class="thumb"></a>
 						</div>
 					</div>
 
 					<div class="item">
 						<div class="animate-box">
 							<a href="images\2022\IMG_20220618_201212 (1).jpg" class="image-popup fh5co-board-img"
-								title=""><img src="images\2022\IMG_20220618_201212 (1).jpg" alt=""></a>
+								title=""><img src="images\2022\IMG_20220618_201212 (1).jpg" alt="" class="thumb"></a>
 						</div>
 					</div>
 
 					<div class="item">
 						<div class="animate-box">
 							<a href="images\2022\1651919964653 (1).jpg" class="image-popup fh5co-board-img"
-								title=""><img src="images\2022\1651919964653 (1).jpg" alt=""></a>
+								title=""><img src="images\2022\1651919964653 (1).jpg" alt="" class="thumb"></a>
 						</div>
 					</div>
 
@@ -132,42 +132,42 @@
 						<div class="animate-box">
 							<a href="images\2022\IMG_20220509_144335357_processed.jpg"
 								class="image-popup fh5co-board-img" title=""><img
-									src="images\2022\IMG_20220509_144335357_processed.jpg" alt=""></a>
+									src="images\2022\IMG_20220509_144335357_processed.jpg" alt="" class="thumb"></a>
 						</div>
 					</div>
 
 					<div class="item">
 						<div class="animate-box">
 							<a href="images\2022\IMG_20220411_102651 (2).jpg" class="image-popup fh5co-board-img"
-								title=""><img src="images\2022\IMG_20220411_102651 (2).jpg" alt=""></a>
+								title=""><img src="images\2022\IMG_20220411_102651 (2).jpg" alt="" class="thumb"></a>
 						</div>
 					</div>
 
 					<div class="item">
 						<div class="animate-box">
 							<a href="images\2022\1647591542456.jpg" class="image-popup fh5co-board-img" title=""><img
-									src="images\2022\1647591542456.jpg" alt=""></a>
+									src="images\2022\1647591542456.jpg" alt="" class="thumb"></a>
 						</div>
 					</div>
 
 					<div class="item">
 						<div class="animate-box">
 							<a href="images\2022\1651919964653 (2).jpg" class="image-popup fh5co-board-img"
-								title=""><img src="images\2022\1651919964653 (2).jpg" alt=""></a>
+								title=""><img src="images\2022\1651919964653 (2).jpg" alt="" class="thumb"></a>
 						</div>
 					</div>
 
 					<div class="item">
 						<div class="animate-box">
 							<a href="images\2022\1653312100748 (1).jpg" class="image-popup fh5co-board-img"
-								title=""><img src="images\2022\1653312100748 (1).jpg" alt=""></a>
+								title=""><img src="images\2022\1653312100748 (1).jpg" alt="" class="thumb"></a>
 						</div>
 					</div>
 
 					<div class="item">
 						<div class="animate-box">
 							<a href="images\2022\1653655647453 (1).jpg" class="image-popup fh5co-board-img"
-								title=""><img src="images\2022\1653655647453 (1).jpg" alt=""></a>
+								title=""><img src="images\2022\1653655647453 (1).jpg" alt="" class="thumb"></a>
 						</div>
 					</div>
 
