--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="Photography Portfolio of Ashutosh Sharma" />
 	<meta name="keywords"
 		content="photography, portfolio, ashutosh sharma, ashutosh, ashutosh sharma portfolio, ashutosh sharma photography portfolio, ashutosh sharma photography, ashutosh photography, ashuu photography, ashuuphotography, ashuphotography, asphotography, ashutosh sharma photography portfolio" />
-	<meta name="author" content="ashutosh.tk" />
+	<meta name="author" content="ashu.cfd" />
 
 	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content="" />
@@ -42,10 +42,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
+
 
 </head>
 
@@ -776,7 +773,7 @@
 			<div class="row row-padded">
 				<div class="col-md-12 text-center">
 					<p class="fh5co-social-icons">
-						<a href="https://ashutosh.tk"><i class="fa-solid fa-user"></i></a>
+						<a href="https://ashu.cfd"><i class="fa-solid fa-user"></i></a>
 						<a href="https://twitter.com/shaayyrr"><i class="fa-brands fa-twitter"></i></a>
 						<a href="https://www.instagram.com/ashuu.photography/"><i
 								class="fa-brands fa-instagram"></i></a>
