--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
 						<a href="https://github.com/venomm97"><i class="fa-brands fa-github"></i></a>
 						<a href="https://www.youtube.com/c/V3NOMOP"><i class="fa-brands fa-youtube"></i></a>
 						<a href="mailto:ashutosh.ssv@gmail.com"><i class="fa-solid fa-envelope"></i></a>
-						<a href="https://ashulinktree.netlify.app/"><i class="fa-solid fa-link"></i></a>
+						<a href="https://bento.me/ashutoshs97"><i class="fa-solid fa-link"></i></a>
 
 					</p>
 					<p><small>&copy; Ashutosh Sharma Photography. All Rights Reserved.</small></p>
