--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
 						<a href="https://twitter.com/shaayyrr"><i class="fa-brands fa-twitter"></i></a>
 						<a href="https://www.instagram.com/ashuu.photography/"><i
 								class="fa-brands fa-instagram"></i></a>
-						<a href="https://github.com/venomm97"><i class="fa-brands fa-github"></i></a>
+						<a href="https://github.com/ashutoshs97"><i class="fa-brands fa-github"></i></a>
 						<a href="https://www.youtube.com/c/V3NOMOP"><i class="fa-brands fa-youtube"></i></a>
 						<a href="mailto:ashutosh.ssv@gmail.com"><i class="fa-solid fa-envelope"></i></a>
 						<a href="https://bento.me/ashutoshs97"><i class="fa-solid fa-link"></i></a>
